TEST WERE NOT WORKING, fix it